--- a/ReportWebApi.Application/ReportWebApi.Application.csproj
+++ b/ReportWebApi.Application/ReportWebApi.Application.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.14" />
+  </ItemGroup>
+
 </Project>
