--- a/ReportWebApi.Domain/ReportWebApi.Domain.csproj
+++ b/ReportWebApi.Domain/ReportWebApi.Domain.csproj
@@ -1,9 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.9.0" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.14" />
+  </ItemGroup>
 </Project>
  
